Bug 70508 - k3b silently ignores files larger than 2GB
Summary: k3b silently ignores files larger than 2GB
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2003-12-15 17:01 UTC by Eric L.
Modified: 2007-03-11 01:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing k3b ignoring a 4 GB file (50.28 KB, image/png)
2006-12-08 15:19 UTC, Tristan Miller
Details
k3b log file; includes mkisofs warnings that a file is being ignored (57.87 KB, text/plain)
2006-12-08 23:30 UTC, Tristan Miller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eric L. 2003-12-15 17:01:43 UTC
Version:           0.10.2cvs (using KDE 3.1.1)
Installed from:    SuSE
Compiler:          gcc version 3.3 20030226 (prerelease) (SuSE Linux)
OS:          Linux (i686) release 2.4.20-4GB-athlon

I tried to burn a DVD+RW with files larger than 2GB (resp. 2.8 GB and 3.9 GB); k3b didn't at all complain but the files were just not on the DVD. Nothing noticed in the debug output.
Splitting the files to chunks of 2000KB solves the problem.
I wasn't able to find the file size limit of iso9660 (I've read somewhere 2GB for Video DVD and
4GB for Data DVDs), but K3b should at least complain that some files are too big.

I use dvd+rw-tools-5.14.4.7.4-0.pm.1 from Packman.links2linux.de and a self-compiled version
of their package k3b-0.10.2-0.pm.0 (self-compiled to support KDE 3.1.1).
Comment 1 Stephan Kulow 2004-01-15 10:38:16 UTC
mkisofs ignores these files. You'll see that in the debug output if you call growisofs huge-file
Comment 2 Sebastian Trueg 2004-01-19 13:55:02 UTC
*** Bug has been marked as fixed ***.
Comment 3 Eric L. 2004-01-23 07:57:19 UTC
I do not fully agree with the resolution: I understand the comment from Stephan so that growisofs, if called by hand, shows that it ignores files bigger than 2GB. Nevertheless an user from K3B doesn't see these messages and, in my opinion, should be warned independently by K3B, best at drag&drop time: "this file you just added might be too big (limit is 2GB) and ignored during the burning phase", or something like this.
Thanks, Eric
Comment 4 Eric L. 2004-01-23 07:58:37 UTC
See preceding comment (did it the wrong way around, sorry).
Comment 5 Sebastian Trueg 2004-01-23 08:59:24 UTC
I said: It is fixed! ;)
Comment 6 Tristan Miller 2006-12-08 15:19:09 UTC
I don't see that this bug has been fixed as of KDE 3.5.2.  I tried to burn a 4 GB file to a data DVD with UDF.  k3b helpfully gave the warning "Found files bigger than 2 GB.  These files will only be fully accessible if mounted with UDF".  However, this implies that the file will actually be burned.  As you can see from the attached screenshot, it was not.  k3b burned only the three 128 MB files and ignored the 4 GB file.

If k3b (or mkisofs, or whatever other program k3b depends on) still cannot handle files larger than 2GB, then k3b needs to warn the user of this.
Comment 7 Tristan Miller 2006-12-08 15:19:50 UTC
Created attachment 18851 [details]
Screenshot showing k3b ignoring a 4 GB file
Comment 8 Sebastian Trueg 2006-12-08 16:30:24 UTC
please provide the debugging output from this burn so I can see the mkisofs command line.
Comment 9 Tristan Miller 2006-12-08 16:41:07 UTC
How do I provide debugging output?
Comment 10 Sebastian Trueg 2006-12-08 18:12:27 UTC
the last one is saved in ~/.kde/share/apps/k3b/lastlog
but the "standard" way is to use the button in the burning progess window once 
the burning finished (you may do a simulation)
Comment 11 Tristan Miller 2006-12-08 23:30:20 UTC
Created attachment 18855 [details]
k3b log file; includes mkisofs warnings that a file is being ignored

See the attached log.  I note that the following warning which says a file is
being ignored appears twice, though the warning was never shown within k3b.

[mkisofs] /usr/bin/mkisofs: Value too large for defined data type. File
/mnt/mar
ten/tmp/backup/2006-12-07_full.1.dar is too large - ignoring

The file in question, 2006-12-07_full.1.dar, is exactly 4 GB in size
(4294967296 bytes).
Comment 12 Tristan Miller 2007-03-10 20:56:02 UTC
Can this bug be marked as REOPENED now please?
Comment 13 Sebastian Trueg 2007-03-11 01:12:00 UTC
no, you are using an outdated version of k3b.