Files >= 4gb cannot be handled by mkisofs. K3b used to check > 4gb. (to be exact it is 0xffffffff) Without large file support it is only 2gb. In this case K3b will now display an error and stop the image creation/burning.

BUG: 70508

svn path=/trunk/extragear/multimedia/k3b/; revision=611837